gke-gclb-misc/frontend-mtls/regional-ilb-frontend-mtls.yaml
# Regional Internal ALB with mTLS to validate client certificates https://docs.cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#configure-frontend-mtls
# see also https://docs.cloud.google.com/load-balancing/docs/mtls
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: whereami-frontend-mtls-uc1-ilb
  namespace: test-gclb
spec:
  gatewayClassName: gke-l7-rilb	# also works on gke-l7-regional-external-managed and gke-l7-global-external-managed
  
  #addresses:
  #- type: NamedAddress
  #  value: whereami-static-ip
  
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    
    tls:
      mode: Terminate    # Must terminate, Passthrough only supported on a few GCLB classes when using tlsroute      
      options: 
        # regional LBs can't use certmap, instead specify individual Certificate Manager certs https://cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#secure-using-ssl-certificate
        networking.gke.io/cert-manager-certs: "uc1-wildcard"
        # or for Kubernetes Secrets see https://docs.cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#secure-using-secret
  
  # require client mTLS certificates https://docs.cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#configure-frontend-mtls-api
  tls:
    frontend:
      default:
        validation:
          mode: AllowValidOnly  # set to AllowInsecureFallback to accept requests if the client certificate is not presented or fails verification
          caCertificateRefs:
          - group: ""
            kind: "ConfigMap"
            name: "client-issuing-ca"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whereami-frontend-mtls-route-uc1-ilb
  namespace: test-gclb
spec:
  parentRefs:
  - name: whereami-frontend-mtls-uc1-ilb
    sectionName: https
  #hostnames:
  #- "*.example.com"
  rules:    # More examples at https://gateway-api.sigs.k8s.io/reference/api-types/httproute/#rules

  # Special handling for canary/* requests
  - matches:
    - path:
        type: PathPrefix
        value: /canary
    backendRefs:
    - name: whereami
      port: 80
    # Strip /canary prefix when forwarding to backend
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /canary
    # Also add some custom headers on proxied request
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: x-is-canary
          value: "true"
        - name: x-mtls-cert-chain
          value: "{client_cert_chain}"
        - name: x-mtls-cert-leaf
          value: "{client_cert_leaf}"
  # Send everything else to gke-gclb-misc/base-whereami-spread.yaml
  - matches:
    - path:
        value: /
    backendRefs:
    - name: whereami
      port: 80
    # add mtls variables as headers when proxying request to the backend https://docs.cloud.google.com/load-balancing/docs/https/custom-headers#mtls-variables
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: x-mtls-details
          value: "present:{client_cert_present} verified:{client_cert_chain_verified} error:{client_cert_error}"
        - name: x-mtls-fingerprint
          value: "{client_cert_sha256_fingerprint}"
        - name: x-mtls-serial-number
          value: "{client_cert_serial_number}"
        - name: x-mtls-spiffe-id
          value: "{client_cert_spiffe_id}"
        - name: x-mtls-sans-dns
          value: "{client_cert_dnsname_sans}"
        - name: x-mtls-subject
          value: "{client_cert_subject_dn}"
        - name: x-mtls-cert-leaf
          value: "{client_cert_leaf}"
        - name: x-mtls-cert-chain
          value: "{client_cert_chain}"

#
# Testing
#

# kubectl apply -f https://github.com/gbrayut/cloud-examples/raw/refs/heads/main/gke-gclb-misc/base-whereami.yaml
# kubectl apply -f <this file>

# kubectl get pod,svc,gateway -n test-gclb 
# kubectl get events -n test-gclb
# kubectl describe gtw -n test-gclb whereami-frontend-mtls-uc1-ilb

# Testing from VM in VPC or using kubectl exec -it -n test-gclb deploy/whereami -- /bin/bash
# Would also need to copy over client crt+key
# ILB_IP=$(kubectl get gtw whereami-frontend-mtls -n test-gclb -o=jsonpath='{.status.addresses[0].value}')
# curl -vsk --cert client-123.mtls.example.com.crt --key client-123.mtls.example.com.key --resolve example.com:443:$ILB_IP https://example.com | jq .headers
